Fix layout bug and flash message errors

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -12,7 +12,7 @@ $theme-colors: (
   "dark": #6c8297
 );
 @import '~bootstrap/scss/bootstrap';
-
+@import "toastr";
 body {
   font-family: 'Lato', sans-serif;
 }
@@ -72,13 +72,14 @@ body {
 
 .flash-messages {
   position: relative;
-  top: 1rem;
-  z-index: 1;
+  top: .5rem;
+  z-index: 1000;
 }
 
 .opinion-body {
   min-height: 100vh;
-  padding: 1rem 2rem;;
+  padding: 1rem 2rem;
+  margin-top: 6rem;
 }
 
 .nav-link-custom {
@@ -158,8 +159,12 @@ body {
 
 .profile-banner {
   margin-top: .5rem;
-  position: relative;
-  margin-bottom: 2rem;
+  position: fixed;
+  margin-left: 0;
+  top: 72px;
+  left: 244px;
+  width: 63%;
+  z-index: 999;
   .cover-image {
     width: 100%;
     height: 237px;
